--- a/sito/assets/styles/course.css
+++ b/sito/assets/styles/course.css
@@ -1197,14 +1197,14 @@ footer #container img {
 }
 
 footer{
-bottom: -1132px;
+bottom: -2144px;
   
 }
 #touch .imgCourse{
 width: 95%;
-height: 68%;
+height: 100%;
 margin-right: 2.5%;
-margin-top: 4%;
+margin-top: 15%;
 float:none;
 
 }
@@ -1212,7 +1212,7 @@ float:none;
 width: 95%;
 height: 10%;
 margin-right: 2.5%;
-margin-left: 27.5%;
+margin-left: 38.5%;
 /* margin-top: 0%; */
 /* text-align: center; */
 float:none;
@@ -1221,13 +1221,14 @@ float:none;
 #touch .descr{
 width: 90%;
 height: 60%;
+margin-bottom: 10%;
 margin-right: 2.5%;
 float:none;
 
 }
 
 div.instr {
-  margin-top: 0%;
+  margin-top: 20%;
 }
 
 	#theteam {
@@ -1350,6 +1351,23 @@ div.instr {
 @media screen and (max-width: 767px) {
   body {
     height: auto; }
+
+#touch .imgCourse{
+width: 94%;
+height: 40%;
+margin-right: 2.5%;
+margin-top: 15%;
+float:none;
+
+}
+    #touch .descr{
+width: 90%;
+height: 60%;
+margin-bottom: 100%;
+margin-right: 2.5%;
+float:none;
+
+}
 
   section {
     margin: 0 auto 0 auto;
@@ -1684,7 +1702,9 @@ section .time{
 .instr{
 
   position:relative;
-  height:100%;
+  
+
+  height: 75%;
   display: block;
   width: 100%;
   padding: 0px 0px 5px 0px;
