--- a/sito/assets/styles/courseCategory.css
+++ b/sito/assets/styles/courseCategory.css
@@ -374,7 +374,7 @@ section h1 {
   padding: 0px 0px 5px 0px;
   color: #22A966;
   font-size: 25px;
-  line-height: 36px;
+  line-height: 100px;
   font-weight: 600;
   text-align: center;
   letter-spacing: 2px;
@@ -621,7 +621,13 @@ section #whatwedo ul li.changemargin {
   width: 100%;
   height: 520px; }
 
+#works ul {
+height: 520px;
+}
+
 #works ul li {
+  border: 2px solid #22a966;
+  float: left;
   display: inline-block;
   width: 33.333333333333333333333%;
   height: 20%;
@@ -638,25 +644,16 @@ section #whatwedo ul li.changemargin {
   -o-transition: background-color 500ms ease-out;
   transition: background-color 500ms ease-out; }
 
-/*#works ul li .shortDescription {
-	top: -20px;
-    left: -20px;
-	height: 25px;
-    color: red;
-    opacity: 0;
-    transition: opacity 300ms ease-out;
-    transition: top 300ms ease-out;
-    transition: left 300ms ease-out;
-}*/
+#works ul li .shortDescription {
+	display: none;
+}
 
-/*#works ul li:hover .shortDescription {
-	opacity: 1;
-    font-weight: 900;
-    top: 0px;
-    left: 0px;
-}*/
+#works ul li:hover .shortDescription {
+	display: block;
+}
 
 #works ul li:hover {
+  background-image: none !important;
   background-color: black;
   cursor: pointer;
   opacity: 1;}
@@ -1247,7 +1244,8 @@ footer #container img {
     width: 728px; }
 
   #selectBar #menu {
-    display: block; }
+    display: block;
+    margin-top: 0px;}
 
   /*<---HEADER--->*/
   #entry {
@@ -1379,7 +1377,7 @@ footer #container img {
   #theteam ul {
     height: auto;
     clear: none; 
-    margin-bottom: 0px;}
+    margin-bottom:  -21px;}
 
   #theteam ul li {
     width: 100%;
@@ -1543,7 +1541,7 @@ footer #container img {
    /*<---FOOTER-->*/
   footer {
     position: relative;
-    bottom: -71px; }
+    bottom: -95px;; }
 
   footer #container {
     width: 97%;
